@@ -1,4 +1,4 @@
-.TH VIFM 1 "October 17, 2015" "vifm 0.8"
+.TH VIFM 1 "October 25, 2015" "vifm 0.8"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -3102,6 +3102,19 @@ otherwise they operate on current file only;
 t \- when included, <tab> (thus <c-i>) behave as <space> and switch active \
 pane, otherwise <tab> and <c-i> go forward in the view history.
 .TP
+.BI 'dirsize'
+type: enum
+.br
+default: size
+.br
+Controls how size of directories is displayed in file views.  The following
+values are possible:
+ \- size   \- size of directory (i.e., size used to store list of files)
+ \- nitems \- number of entries in the directory (excluding . and ..)
+
+Size obtained via ga/gA overwrites this setting so seeing count of files and
+occasionally size of directories is possible.
+.TP
 .BI 'dotdirs'
 type: set
 .br
@@ -3110,7 +3123,7 @@ default: nonrootparent
 Controls displaying of dot directories.  The following values are possible:
  \- rootparent    \- show "../" in root directory of file system
  \- nonrootparent \- show "../" in non-root directories of file system
-.br
+
 Note that empty directories always contain "../" entry regardless of value of
 this option.  "../" disappears at the moment at least one file is created.
 .TP
