@@ -1,4 +1,4 @@
-*vifm-app.txt*    For Vifm version 0.8  Last change: 2015 Oct 17
+*vifm-app.txt*    For Vifm version 0.8  Last change: 2015 Oct 25
 
  Email for bugs and suggestions: <xaizek@openmailbox.org>
 
@@ -2557,8 +2557,22 @@ default: nonrootparent
 Controls displaying of dot directories.  The following values are possible:
  - rootparent    - show "../" in root directory of file system
  - nonrootparent - show "../" in non-root directories of file system
+
 Note that empty directories always contain "../" entry regardless of value of
 this option.  "../" disappears at the moment at least one file is created.
+
+                                               *vifm-'dirsize'*
+dirsize
+type: enum
+default: size
+
+Controls how size of directories is displayed in file views.  The following
+values are possible:
+ - size   - size of directory (i.e., size used to store list of files)
+ - nitems - number of entries in the directory (excluding . and ..)
+
+Size obtained via ga/gA overwrites this setting so seeing count of files and
+occasionally size of directories is possible.
 
                                                *vifm-'fastrun'*
 fastrun
